--- a/blocks/page/page.scss
+++ b/blocks/page/page.scss
@@ -1,11 +1,8 @@
 .page {
   max-width: 1440px;
-  background-color: #000000;
-  display: flex;
-  flex-direction: column;
+  min-width: 320px;
   margin: 0 auto;
   padding: 0;
-  position: relative;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
