--- a/blocks/contact/contact.scss
+++ b/blocks/contact/contact.scss
@@ -5,7 +5,7 @@
   padding: 0;
   background-color: #5036E6;
   color: #FFFFFF;
-  background-image: url('../../images/contacn-team.png');
+  background-image: url('../images/contacn-team.png');
   background-repeat: no-repeat;
 
     @media screen and (max-width: 1230px) {
@@ -15,11 +15,11 @@
       @media screen and (max-width: 900px) {
       background-position: 0;
       background-position-y: 5px;
-      background-image: url('../../images/contact team 2.svg');
+      background-image: url('../images/contact team 2.svg');
     }
 
     @media screen and (max-width: 650px) {
-      background-image: url('../../images/contact team 3.svg');
+      background-image: url('../images/contact team 3.svg');
       background-position-y: bottom;
       }
 
@@ -58,13 +58,11 @@
     }
 
     &__title {
+      @include font-size-title;
       max-width: 520px;
       margin: 0;
       padding: 0;
-      font-family: 'Noto Sans';
       font-weight: 500;
-      font-size: 70px;
-      line-height: 63px;
 
       @media screen and (max-width: 650px) {
         font-size: 40px;
@@ -73,13 +71,9 @@
     }
 
     &__text {
-      margin: 40px 0 0 0;
-      padding: 0;
+      @include font-size-text;
+      margin: 0;
       max-width: 520px;
-      font-family: 'Noto Sans';
-      font-weight: normal;
-      font-size: 20px;
-      line-height: 26px;
 
       @media screen and (max-width: 650px) {
         margin: 20px 0 0 0;
