--- a/blocks/team/team.scss
+++ b/blocks/team/team.scss
@@ -17,12 +17,9 @@
   }
 
     &__title {
+    @include font-size-title;
     margin: 0;
     padding: 0;
-    color: #FFFFFF;
-    font-family: 'Noto Sans';
-    font-size: 70px;
-    line-height: 63px;
     font-weight: 700;
 
       @media screen and (max-width: 420px) {
@@ -31,13 +28,9 @@
     }
   }
   &__text {
+    @include font-size-text;
     max-width: 500px;
     margin: 0;
-    color: #FFFFFF;
-    font-family: 'Noto Sans';
-    padding-top: 40px;
-    font-size: 20px;
-    line-height: 26px;
 
     @media screen and (max-width: 420px) {
       max-width: 280px;
@@ -122,18 +115,6 @@
       text-align: center;
     }
   }
-  .swiper-pagination {
-
-    @media screen and (max-width: 320px) {
-      width: 20px;
-      height: 20px;
-      line-height: 20px;
-      font-size: 14px;
-      background-color: #FFFFFF;
-
-    }
-  }
-
 }
 
 
